# ChangeLog for sys-process/psmisc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.80 2008/05/14 14:34:45 jer Exp $

  14 May 2008; Jeroen Roovers <jer@gentoo.org> psmisc-22.6.ebuild:
  Stable for HPPA too.

  12 May 2008; Markus Rothe <corsair@gentoo.org> psmisc-22.6.ebuild:
  Stable on ppc64

  07 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> psmisc-22.6.ebuild:
  amd64 stable

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org> psmisc-22.6.ebuild:
  alpha/ia64/sparc/x86 stable

*psmisc-22.6 (04 Nov 2007)

  04 Nov 2007; Mike Frysinger <vapier@gentoo.org> +psmisc-22.6.ebuild:
  Version bump.

  06 Oct 2007; Mike Frysinger <vapier@gentoo.org>
  +files/psmisc-22.5-no-nls.patch, psmisc-22.5-r2.ebuild:
  Fix from impulze for building with USE=-nls and no gettext installed #193920
  by Julian Golderer.

  27 Sep 2007; Joseph Jezak <josejx@gentoo.org> psmisc-22.5-r2.ebuild:
  Marked ppc stable for bug #193833.

  27 Sep 2007; Joshua Kinard <kumba@gentoo.org> psmisc-22.5-r2.ebuild:
  Stable on mips, per #193833.

  26 Sep 2007; Brent Baude <ranger@gentoo.org> psmisc-22.5-r2.ebuild:
  Marking psmisc-22.5-r2 ppc64 stable for bug 193833

  26 Sep 2007; Jeroen Roovers <jer@gentoo.org> psmisc-22.5-r2.ebuild:
  Stable for HPPA (bug #193833).

  26 Sep 2007; Raúl Porcel <armin76@gentoo.org> psmisc-22.5-r2.ebuild:
  alpha/ia64/x86 stable wrt #193833

  26 Sep 2007; Ferris McCormick <fmccor@gentoo.org> psmisc-22.5-r2.ebuild:
  Sparc stable --- Bug #193833 --- seems fine.

  26 Sep 2007; Christoph Mende <angelos@gentoo.org> psmisc-22.5-r2.ebuild:
  Stable on amd64 wrt bug #193833

  26 Sep 2007; Mike Frysinger <vapier@gentoo.org> psmisc-22.5-r2.ebuild:
  Drop C++ cruft from build system.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> psmisc-22.5.ebuild:
  ppc. stable

  13 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> psmisc-22.5-r1.ebuild:
  Stable on sparc
