@@ -1,6 +1,10 @@
 # ChangeLog for sys-process/psmisc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.80 2008/05/14 14:34:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.81 2008/06/01 02:14:33 vapier Exp $
+
+  01 Jun 2008; Mike Frysinger <vapier@gentoo.org> psmisc-22.6.ebuild:
+  Dont pass --disable-nls in the USE=-nls case to avoid confusing warnings
+  #220787 by Martin Mokrejs.
 
   14 May 2008; Jeroen Roovers <jer@gentoo.org> psmisc-22.6.ebuild:
   Stable for HPPA too.
